--- a/hat.cabal
+++ b/hat.cabal
@@ -22,9 +22,23 @@ source-repository head
 
 executable hat
   main-is:             Main.hs
-  -- other-modules:       
-  -- other-extensions:    
-  build-depends:       base >=4.8 && <5
+  other-modules:
+    Types
+  build-depends:       Spock
+                     , Spock-lucid == 0.2.*
+                     , acid-state
+                     , base >=4.8 && <5
+                     , base-prelude == 1.*
+                     , lucid >= 2.9.5 && < 3
+                     , microlens-platform
+                     , mtl
+                     , path-pieces
+                     , safecopy
+                     , scrypt
+                     , text
+                     , time
+                     , transformers
+                     , wai-middleware-static
   ghc-options:         -Wall -fno-warn-unused-do-bind
   hs-source-dirs:      src
   default-language:    Haskell2010
