--- a/hat.cabal
+++ b/hat.cabal
@@ -14,6 +14,9 @@ category:            Game
 tested-with:         GHC == 7.10.3
 build-type:          Simple
 extra-source-files:  CHANGELOG.md
+data-files:
+  static/*.css
+  static/*.js
 cabal-version:       >=1.10
 
 source-repository head
@@ -24,6 +27,8 @@ executable hat
   main-is:             Main.hs
   other-modules:
     Types
+    Utils
+    JS
   build-depends:       Spock
                      , Spock-lucid == 0.2.*
                      , acid-state
@@ -31,6 +36,10 @@ executable hat
                      , base-prelude == 1.*
                      , containers
                      , directory
+                     , hashable
+                     , text-format
+                     , MonadRandom
+                     , neat-interpolation
                      , lucid >= 2.9.5 && < 3
                      , microlens-platform
                      , mtl
