--- a/hat.cabal
+++ b/hat.cabal
@@ -17,6 +17,7 @@ extra-source-files:  CHANGELOG.md
 data-files:
   static/*.css
   static/*.js
+  static/*.svg
 cabal-version:       >=1.10
 
 source-repository head
