--- a/hat.cabal
+++ b/hat.cabal
@@ -45,7 +45,7 @@ executable hat
                      , ilist
                      , lucid >= 2.9.5 && < 3
                      , megaparsec
-                     , microlens-platform
+                     , microlens-platform >= 0.3.2
                      , mtl
                      , neat-interpolation
                      , optparse-applicative
